integration tests for all binary operators